removes `left` on eyes, addresses alignment bug
closes #41

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -331,7 +331,6 @@ opacity: 1;  }
 .logo .one,
 .logo .three {
 	position: absolute;
-	left: 18em;
 	top: 6.5625em;
 }
 .logo .one {
